# mphyfem

./: .buildinfo  CMakeLists-Chennalaptop.txt  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/formulation/: formulation.doctree
.doctrees/inputformat/: inputfiles.doctree
.doctrees/installation/: installation.doctree
.doctrees/options/: elements.doctree  materials.doctree
_sources/: index.rst.txt
_sources/formulation/: formulation.rst.txt
_sources/inputformat/: inputfiles.rst.txt
_sources/installation/: installation.rst.txt
_sources/options/: materials.rst.txt
doc/: conf.py
doc/options/: elements.rst
formulation/: formulation.html
inputformat/: inputfiles.html
installation/: installation.html
options/: elements.html  materials.html
src/: femCahnHilliard.cpp  femGrowth.cpp  femINSmixed.cpp  femINSstabilised.cpp  femInfSup.cpp  femMagnetomech.cpp  femNSCHstabilised.cpp  femSolidmechanics.cpp
src/electromechFEM/: BernsteinElem2DEdge2Node.cpp  BernsteinElem2DEdge2Node.h  BernsteinElem2DEdge3Node.cpp  BernsteinElem2DEdge3Node.h  BernsteinElem2DElecMechQua11.cpp  BernsteinElem2DElecMechQua11.h  BernsteinElem2DElecMechQua110.cpp  BernsteinElem2DElecMechQua110.h  BernsteinElem2DElecMechQua1100.cpp  BernsteinElem2DElecMechQua1100.h  BernsteinElem2DElecMechQua11F.cpp  BernsteinElem2DElecMechQua11F.h  BernsteinElem2DElecMechQua221.cpp  BernsteinElem2DElecMechQua221.h  BernsteinElem2DElecMechQua221P.cpp  BernsteinElem2DElecMechQua221P.h  BernsteinElem2DElecMechTri11.cpp  BernsteinElem2DElecMechTri11.h  BernsteinElem2DElecMechTri210.cpp  BernsteinElem2DElecMechTri210.h  BernsteinElem2DElecMechTri211.cpp  BernsteinElem2DElecMechTri211.h  BernsteinElem2DElecMechTri22.cpp  BernsteinElem2DElecMechTri22.h  BernsteinElem2DElecMechTri220.cpp  BernsteinElem2DElecMechTri220.h  BernsteinElem2DElecMechTri221.cpp  BernsteinElem2DElecMechTri221.h  BernsteinElem2DElecMechTri22F.cpp  BernsteinElem2DElecMechTri22F.h  BernsteinElem3DElecMechHex11.cpp  BernsteinElem3DElecMechHex11.h  BernsteinElem3DElecMechHex110.cpp  BernsteinElem3DElecMechHex110.h  BernsteinElem3DElecMechHex1100.cpp  BernsteinElem3DElecMechHex1100.h  BernsteinElem3DElecMechHex11F.cpp  BernsteinElem3DElecMechHex11F.h  BernsteinElem3DElecMechHex221.cpp  BernsteinElem3DElecMechHex221.h  (+21 more)
src/femCahnHilliard/: femCahnHilliard.h  femCahnHilliard1.cpp  femCahnHilliard2.cpp  phasefieldRoutines.cpp  phasefieldRoutines.h
src/femGrowth/: Elem_Growth_3D_Mixed21.cpp  Elem_Growth_3D_Mixed21.h  GrowthElem3DHex1.cpp  GrowthElem3DHex1.h  GrowthElem3DHex10.cpp  GrowthElem3DHex10.h  NewElementGrowthFEM.h  femGrowth.h  femGrowth1.cpp  femGrowth2.cpp  femGrowth3.cpp  femGrowth4.cpp  growthfunctions.cpp  main.cpp
src/femINSmixed/: AABB.h  BernsteinElem2DINSQuad9Node.cpp  BernsteinElem2DINSQuad9Node.h  BernsteinElem2DINSTria6Node.cpp  BernsteinElem2DINSTria6Node.h  BernsteinElem2DINSTriaP2bP1dc.cpp  BernsteinElem2DINSTriaP2bP1dc.h  BernsteinElem3DINSTetra10Node.cpp  BernsteinElem3DINSTetra10Node.h  ElementBaseINSmixed.cpp  ElementBaseINSmixed.h  FluidMaterialBase.cpp  FluidMaterialBase.h  ImmersedIntegrationElement.cpp  ImmersedIntegrationElement.h  ImmersedSolid.cpp  ImmersedSolid.h  ImmersedSolid2.cpp  ViscoElasticModels.h  elementutilitiescfd.cpp  elementutilitiescfd.h  femINSmixed.h  femINSmixed1.cpp  femINSmixed2.cpp  femINSmixed3.cpp  femINSmixed4.cpp  femINSmixed5.cpp
src/femINSstabilised/: femINSstabilised.h  femINSstabilised1.cpp  femINSstabilised2.cpp  myClass.h
src/femMagnetomech/: Elem_Magnmech_3D_HM_10.cpp  Elem_Magnmech_3D_HM_10.h  Elem_Magnmech_3D_HM_21.cpp  Elem_Magnmech_3D_HM_21.h  Elem_Magnmech_3D_SM_221.cpp  Elem_Magnmech_3D_SM_221.h  NewElementMagnetoMech.h  femMagnetomech.h  femMagnetomech1.cpp  femMagnetomech2.cpp  femMagnetomech3.cpp
src/femMultiphase/: femNSCHstabilised.h  femNSCHstabilised1.cpp  femNSCHstabilised2.cpp  femNSCHstabilised3.cpp
src/femSolidmechanics/: Elem_Solid_2D_Disp.cpp  Elem_Solid_2D_Disp.h  Elem_Solid_2D_Mixed0.cpp  Elem_Solid_2D_Mixed0.h  Elem_Solid_2D_Mixed1.cpp  Elem_Solid_2D_Mixed1.h  Elem_Solid_2D_Tria10_Mixed1.cpp  Elem_Solid_2D_Tria10_Mixed1.h  Elem_Solid_2D_Tria7_Mixed1.cpp  Elem_Solid_2D_Tria7_Mixed1.h  Elem_Solid_3D_Disp.cpp  Elem_Solid_3D_Disp.h  Elem_Solid_3D_Mixed0.cpp  Elem_Solid_3D_Mixed0.h  Elem_Solid_3D_Mixed1.cpp  Elem_Solid_3D_Mixed1.h  Elem_Solid_3D_Tetra11_Mixed1.cpp  Elem_Solid_3D_Tetra11_Mixed1.h  Elem_Solid_3D_Tetra20_Mixed1.cpp  Elem_Solid_3D_Tetra20_Mixed1.h  ExactSolutionsElasticity.h  NewLagrangeElement.h  femSolidmechanics.h  femSolidmechanics1.cpp  femSolidmechanics2.cpp  femSolidmechanics3.cpp
src/growthFEM/: GrowthElem2DMixedBase.cpp  GrowthElem2DMixedBase.h  GrowthElem2DQua1.cpp  GrowthElem2DQua1.h  GrowthElem2DQua10.cpp  GrowthElem2DQua10.h  GrowthElem2DQua21.cpp  GrowthElem2DQua21.h  GrowthElem2DQua21J.cpp  GrowthElem2DQua21J.h  GrowthElem2DQua21P.cpp  GrowthElem2DQua21P.h  GrowthElem2DTri21.cpp  GrowthElem2DTri21.h  (+14 more)
(+179 files in other folders)
